Fix spacing on work link

--- a/source/stylesheets/style.css.scss
+++ b/source/stylesheets/style.css.scss
@@ -60,13 +60,6 @@ a:hover, a:focus, a:active {
     }
 }
 
-// .about-main {
-//     padding: 2rem 1rem;
-//     @media (min-width: 700px) { 
-//         padding: 0 2rem;
-//     }
-// }
-
 .info-section {
     color: #222;
     margin-bottom: 10vw;
@@ -105,6 +98,10 @@ a:hover, a:focus, a:active {
     @media (min-width: 700px) { 
     font-size: $font-flex-2;
     }
+}
+
+.work-section {
+    padding-top: 2rem;
 }
 
 .project-container {
